Initial changes to home page

--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -42,7 +42,7 @@ table {
   border-collapse: collapse;
 }
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 13px;
   line-height: 1.5;
   color: #000;
