--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -7,7 +7,7 @@
  */
 
 html {
-  font-family: sans-serif; /* 1 */
+  font-family: "Montserrat", sans-serif;
   -webkit-text-size-adjust: 100%; /* 2 */
   -ms-text-size-adjust: 100%; /* 2 */
 }
@@ -428,11 +428,11 @@ th {
 
 /* LAYOUT STYLES */
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
   font-weight: 400;
   line-height: 1.5;
-  color: #666;
+  color: #3b3b3b;
   background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
 }
 
@@ -450,7 +450,7 @@ a:hover {
 header {
   padding-top: 40px;
   padding-bottom: 40px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
 }
@@ -516,12 +516,17 @@ aside#sidebar p.repo-owner a {
   margin-bottom: 40px;
 }
 
+a.bounced {
+	padding-left: 1.8em;
+	font-size: larger;
+}
+
 a.button {
   width: 134px;
   height: 58px;
   padding-top: 22px;
   padding-left: 68px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 23px;
   line-height: 1.2;
   color: #fff;
@@ -614,7 +619,7 @@ form {
 #main-content h1 {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 2.8em;
   font-weight: normal;
   color: #474747;
@@ -631,7 +636,7 @@ form {
 
 #main-content h2 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 22px;
   font-weight: bold;
   color: #474747;
@@ -647,7 +652,7 @@ form {
 #main-content h3 {
   margin-top: 24px;
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
   font-weight: bold;
   color: #474747;
@@ -663,7 +668,7 @@ form {
 
 #main-content h4 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
   font-weight: bold;
   color: #474747;
@@ -679,7 +684,7 @@ h4:before {
 
 #main-content h5 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
   color: #474747;
   text-indent: 3px;
@@ -693,7 +698,7 @@ h5:before {
 
 #main-content h6 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: "Montserrat", sans-serif;
   font-size: .8em;
   color: #474747;
   text-indent: 3px;
