--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -22,16 +22,98 @@ summary {
   display: block;
 }
 
-#content_frame {
-  border: none;
-  overflow: hidden;
-  width: 690px;
+#header {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-family: "Montserrat", sans-serif;
+  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
+  border-bottom: solid 1px #275da1;
+  width: 100%;
+  position: fixed;
+  z-index: 2;
+}
+
+.inner {
+  display: block;
+  position: relative;
+  width: 940px;
+  margin: 0 auto;
+}
+
+#header_h1 {
+  width: 540px;
+  margin-top: 0;
+  margin-bottom: 0.2em;
+  font-size: 72px;
+  font-weight: normal;
+  line-height: 1;
+  color: #fff;
+  letter-spacing: -1px;
+}
+
+#header_h2 {
+  width: 540px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 26px;
+  font-weight: normal;
+  line-height: 1.3;
+  color: #9ddcff;
+  letter-spacing: 0;
 }
 
 #navigation {
   padding: 10px;
   font-size: 2.2em;
   text-align: center;
+  position: fixed;
+  width: 100%;
+  top: 190px;
+  z-index: 2;
+  background: #fafafa;
+}
+
+#menu_wrapper {
+  border: none;
+  padding: 10px;
+  font-size: 1.8em;
+  margin-left: 1em;
+  top: 220px;
+  width: 20%;
+  position: fixed;
+  z-index: 2;
+}
+
+#content_frame {
+  border: none;
+  overflow: hidden;
+  width: 690px;
+}
+
+#content-wrapper {
+  padding-top: 30px;
+  border-top: solid 1px #fff;
+  position: absolute;
+  width: 100%;
+  top: 220px;
+}
+
+#main-content {
+  width: 690px;
+  float: left;
+  height: 100vh;
+}
+
+#sidebar {
+  float: right;
+  width: 200px;
+  min-height: 504px;
+  padding-top: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 12px;
+  line-height: 1.3;
+  background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
 }
 
 a {
@@ -93,72 +175,6 @@ object {
   height: 100%;
 }
 
-header {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  font-family: "Montserrat", sans-serif;
-  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
-  border-bottom: solid 1px #275da1;
-}
-
-header h1 {
-  width: 540px;
-  margin-top: 0;
-  margin-bottom: 0.2em;
-  font-size: 72px;
-  font-weight: normal;
-  line-height: 1;
-  color: #fff;
-  letter-spacing: -1px;
-}
-
-header h2 {
-  width: 540px;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size: 26px;
-  font-weight: normal;
-  line-height: 1.3;
-  color: #9ddcff;
-  letter-spacing: 0;
-}
-
-.inner {
-  position: relative;
-  width: 940px;
-  margin: 0 auto;
-}
-
-#content-wrapper {
-  padding-top: 30px;
-  border-top: solid 1px #fff;
-}
-
-#inner {
-  display: block;
-  position: relative;
-  width: 940px;
-  margin: 0 auto;
-}
-
-#main-content {
-  width: 690px;
-  float: left;
-  height: 100vh;
-}
-
-#sidebar {
-  float: right;
-  width: 200px;
-  min-height: 504px;
-  padding-top: 25px;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 12px;
-  line-height: 1.3;
-  background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
-}
-
 a.bounced {
   padding-left: 1.2em;
   font-size: larger;
@@ -216,6 +232,7 @@ code, pre {
   font-size: 13px;
   font-weight: bolder;
   color: #222;
+  background: white;
 }
 
 code {
